# pm-system

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: pm-killtest-adoption.md  pm-killtest-feasibility.md  pm-killtest-rarity.md  pm-killtest-solved.md  pm-launch-drafter.md  pm-launch-policy.md  pm-launch-slop-critic.md  pm-launch-targeter.md  pm-reranker.md
pmkit/: README.md  pyproject.toml
pmkit/src/pmkit/: __init__.py  backlog.py  cli.py  dedup.py  discover.py  killtest.py  rice.py
pmkit/src/pmkit/connectors/: __init__.py  base.py  changelog.py  github.py  hn.py  reddit.py  web.py  x.py
pmkit/src/pmkit/dogfood/: __init__.py  file_gaps.py  install.py  mcp.py  report.py  sample.py  ui.py
pmkit/src/pmkit/launch/: __init__.py  collateral.py  drafts.py  listen.py  plan.py  policy.py  store.py
pmkit/tests/: test_agents.py  test_backlog.py  test_cli.py  test_connectors_parse.py  test_dedup.py  test_discover.py  test_dogfood_drivers.py  test_dogfood_file_gaps.py  test_dogfood_install.py  test_dogfood_report.py  test_dogfood_skill.py  test_dogfood_streamlit.py  test_funnel.py  test_gate.py  test_killtest.py  test_launch_collateral.py  test_launch_drafts.py  test_launch_listen.py  test_launch_plan.py  test_launch_policy.py  test_launch_scenario.py  test_launch_store.py  test_rice.py  test_spec.py
skills/pm-dogfood/: SKILL.md
skills/pm-dogfood/references/: dogfood-method.md
skills/pm-launch/: SKILL.md
skills/pm-launch/references/: launch-method.md
skills/pm-run/: SKILL.md
skills/pm-spec/: SKILL.md
workflows/: pm-funnel-langstage.js  pm-funnel.js
(+1 files in other folders)
